URL change to http://

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-      <iframe src="https://etoj.xyz/">
+      <iframe src="http://etoj.xyz/">
       </iframe>
 </body>
 </html>
